@@ -5,7 +5,8 @@ extends =
 parts +=
     nginx-conf
     gunicorn
-    gunicorn-django-conf
+    gunicorn-app-conf
+    gunicorn-api-conf
     tilecache-conf
     gunicorn-tilecache-conf
     convertit-conf
@@ -117,20 +118,30 @@ eggs = ${buildout:eggs}
 extra-paths = ${buildout:extra-paths}
 entry-points = gunicorn_django=gunicorn.app.djangoapp:run
 
-[gunicorn-django-conf]
+[gunicorn-app-conf]
 recipe = collective.recipe.genshi
-port = 80
 workers = 4
+timeout = 30
 bind = unix:${buildout:directory}/var/run/gunicorn-${django:project}.sock
 pidfile = ${buildout:directory}/var/run/gunicorn-${django:project}.pid
 errorlog = ${buildout:directory}/var/log/gunicorn-${django:project}.log
 input = ${buildout:directory}/conf/gunicorn.conf.in
 output = ${buildout:directory}/etc/gunicorn-${django:project}.conf
 
+[gunicorn-api-conf]
+recipe = collective.recipe.genshi
+workers = 4
+timeout = 300
+bind = unix:${buildout:directory}/var/run/gunicorn-${django:project}_api.sock
+pidfile = ${buildout:directory}/var/run/gunicorn-${django:project}_api.pid
+errorlog = ${buildout:directory}/var/log/gunicorn-${django:project}.log
+input = ${buildout:directory}/conf/gunicorn.conf.in
+output = ${buildout:directory}/etc/gunicorn-${django:project}_api.conf
+
 [gunicorn-tilecache-conf]
 recipe = collective.recipe.genshi
-port = 80
 workers = 6
+timeout = 10
 bind = unix:${buildout:directory}/var/run/gunicorn-tilecache.sock
 pidfile = ${buildout:directory}/var/run/gunicorn-tilecache.pid
 errorlog = ${buildout:directory}/var/log/gunicorn-tilecache.log
@@ -146,6 +157,7 @@ output = ${buildout:directory}/etc/tilecache.cfg
 [gunicorn-convertit-conf]
 recipe = collective.recipe.genshi
 workers = 4
+timeout = 30
 bind = unix:${buildout:directory}/var/run/gunicorn-convertit.sock
 pidfile = ${buildout:directory}/var/run/gunicorn-convertit.pid
 errorlog = ${buildout:directory}/var/log/gunicorn-convertit.log
@@ -192,7 +204,8 @@ childlogdir = ${buildout:directory}/var/log
 nodaemon = true
 programs =
 # Priority means order of start/shutdown
-    20 ${django:project} (stdout_logfile=${buildout:directory}/var/log/${django:project}.log stderr_logfile=${buildout:directory}/var/log/${django:project}.log) ${buildout:directory}/bin/django [run_gunicorn --config=${gunicorn-django-conf:output}] ${buildout:directory}/etc true
+    20 ${django:project} (stdout_logfile=${buildout:directory}/var/log/${django:project}.log stderr_logfile=${buildout:directory}/var/log/${django:project}.log) ${buildout:directory}/bin/django [run_gunicorn --config=${gunicorn-app-conf:output}] ${buildout:directory}/etc true
+    20 ${django:project}_api (stdout_logfile=${buildout:directory}/var/log/${django:project}.log stderr_logfile=${buildout:directory}/var/log/${django:project}.log) ${buildout:directory}/bin/django [run_gunicorn --config=${gunicorn-api-conf:output}] ${buildout:directory}/etc true
     30 tilecache (stdout_logfile=${buildout:directory}/var/log/tilecache.log stderr_logfile=${buildout:directory}/var/log/tilecache.log) ${buildout:directory}/bin/gunicorn [-c ${gunicorn-tilecache-conf:output} TileCache:wsgiApp] ${buildout:directory}/etc true
     40 convertit (stdout_logfile=${buildout:directory}/var/log/convertit.log stderr_logfile=${buildout:directory}/var/log/convertit.log) ${buildout:directory}/bin/gunicorn_paster [-c ${gunicorn-convertit-conf:output} ${convertit-conf:output}] ${buildout:directory}/etc true
 
